# Simple_2D_Game

./: .gitignore  CMakeLists.txt  Game.sln  unique.txt
MyGame/: CMakeLists.txt  MyGame.vcxproj  MyGame.vcxproj.filters  MyGameApp.cpp  MyGameApp.h  Things.cpp  Things.h  driver.cpp
WindWheelReal/: AbstractRenderer.h  AbstractShader.h  AbstractSprite.h  AbstractWindow.h  CMakeLists.txt  CodesForKeys.h  InputEvents.cpp  InputEvents.h  ShaderProgram.cpp  ShaderProgram.h  SingleRenderer.cpp  SingleRenderer.h  TwoDSprite.cpp  TwoDSprite.h  WinForGame.cpp  WinForGame.h  WindWheelReal.h  WindWheelReal.vcxproj  WindWheelReal.vcxproj.filters  WindWheelRealApp.cpp  WindWheelRealApp.h  WwrMacroDefinitions.h  precompilehead.cpp  precompilehead.h
WindWheelReal/Assets/Shaders/: defaultFragmentShader.glsl  defaultVertexShader.glsl
WindWheelReal/usingGLFW/: ActualGlfwWin.cpp  ActualGlfwWin.h
WindWheelReal/usingOpenGl/: OpenGLRend.cpp  OpenGLRend.h  OpenGlShaderProgram.cpp  OpenGlShaderProgram.h  TwoDSpriteOpenGl.cpp  TwoDSpriteOpenGl.h
glad/: CMakeLists.txt  glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
